# RayGame

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
src/data/: SavesManager.h
src/files/: SaveManager.h
src/ui/: ResizeHelper.h
src/ui/animations/: Animation.h  TextAnimation.cpp  TextAnimation.h
src/ui/interface/: Button.cpp  Button.h  TextField.h
